[package]
name = "harlaw"
version = "1.1.1"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/harlaw-rs"
description = """
Transform DSL files to JSON. Formatting options available for custom output.
"""
keywords = ["dsl", "json", "dictionary", "transform", "harlaw"]
categories = ["encoding", "parsing", "text-processing"]
edition = "2018"
exclude = ["tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.8.0"